--- a/ngdocs/partials/api/dotjem.routing.$scrollProvider.html
+++ b/ngdocs/partials/api/dotjem.routing.$scrollProvider.html
@@ -3,5 +3,16 @@
 )</span>
 </h1>
 <div><h2 id="Description">Description</h2>
-<div class="description"><p>Use the <code>$scrollProvider</code> to configure scroll behavior of the application.</p></div>
+<div class="description"></div>
+<h2 id="Dependencies">Dependencies</h2>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/ng.$window">$window</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/ng.$location">$location</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/ng.$rootScope">$rootScope</a></code>
+</li>
+</ul>
+<h2 id="Usage">Usage</h2>
+<div class="usage"><pre class="prettyprint linenums">$scrollProvider();</pre>
+</div>
 </div>
