--- a/ngdocs/partials/api/dotjem.routing.$scroll.html
+++ b/ngdocs/partials/api/dotjem.routing.$scroll.html
@@ -3,5 +3,22 @@
 )</span>
 </h1>
 <div><h2 id="Description">Description</h2>
-<div class="description"><p>Use the <code>$scroll</code> to perform scrolling in the application.</p></div>
+<div class="description"></div>
+<h2 id="Dependencies">Dependencies</h2>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/ng.$window">$window</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/ng.$rootScope">$rootScope</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/ng.$anchorScroll">$anchorScroll</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/ng.$injector">$injector</a></code>
+</li>
+</ul>
+<h2 id="Usage">Usage</h2>
+<div class="usage"><pre class="prettyprint linenums">$scroll([target]);</pre>
+<h3 id="Parameters">Parameters</h3>
+<ul class="parameters"><li><code ng:non-bindable="">target<i>(optional)</i> – {string|function=} – </code>
+<p>The element name to scroll to or a function returning it.</p></li>
+</ul>
+</div>
 </div>
