--- a/ngdocs/partials/api/dotjem.routing.$scrollProvider.html
+++ b/ngdocs/partials/api/dotjem.routing.$scrollProvider.html
@@ -7,9 +7,11 @@
 <h2 id="Dependencies">Dependencies</h2>
 <ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/ng.$window">$window</a></code>
 </li>
-<li><code ng:non-bindable=""><a href="#/api/ng.$location">$location</a></code>
-</li>
 <li><code ng:non-bindable=""><a href="#/api/ng.$rootScope">$rootScope</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/ng.$anchorScroll">$anchorScroll</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/ng.$injector">$injector</a></code>
 </li>
 </ul>
 <h2 id="Usage">Usage</h2>
