$transition and $transitionProvider documentation closes #31, closes #32

--- a/doc/partials/api/dotjem.routing.$stateTransition.html
+++ b/doc/partials/api/dotjem.routing.$stateTransition.html
@@ -3,23 +3,11 @@
 )</span>
 </h1>
 <div><h2 id="Description">Description</h2>
-<div class="description"></div>
+<div class="description"><p>Internal use</p></div>
 <h2 id="Dependencies">Dependencies</h2>
 <ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/ng.$q">$q</a></code>
 </li>
 <li><code ng:non-bindable=""><a href="#/api/ng.$injector">$injector</a></code>
 </li>
 </ul>
-<div class="member method"><h2 id="Methods">Methods</h2>
-<ul class="methods"><li><h3 id="find">find(from, to)</h3>
-<div class="find"><h4 id="Parameters">Parameters</h4>
-<ul class="parameters"><li><code ng:non-bindable="">from – {string|State|Array} – </code>
-<p>The state we are transitioning from.</p></li>
-<li><code ng:non-bindable="">to – {string|State|Array} – </code>
-<p>The state we are transitioning to.</p></li>
-</ul>
-</div>
-</li>
-</ul>
-</div>
 </div>
