--- a/doc/partials/api/dotjem.routing.$stateTransitionProvider.html
+++ b/doc/partials/api/dotjem.routing.$stateTransitionProvider.html
@@ -3,34 +3,246 @@
 )</span>
 </h1>
 <div><h2 id="Description">Description</h2>
-<div class="description"><p>Used for configuring states. See <a href="#/api/dotjem.routing.$state">$state</a> for an example.</p></div>
+<div class="description"><p>Use the <code>$stateTransitionProvider</code> to configure handlers for transitions between states.
+<br/>
+The transition handlers allows for canceling a transition, e.g. if it is invalid or rerouting it to another state.
+They can also be used to perform steps that should only be performed as part of a specific transition from e.g. state 'A' to state 'B', but not 'C' to 'B'.
+<br/>
+Besides the more general <a href="#/api/dotjem.routing.$stateTransitionProvider#transition">transition</a> method, specialized configuration methods exists for entering and leaving states.
+These specialized cases can also be configured on the states instead of using the <code>$stateTransitionProvider</code>. See <a href="#/api/dotjem.routing.$stateProvider">$stateProvider</a> for more information about that.
+<br/></p>
+
+<h3 id="transitionhandlers">Transition Handlers</h5>
+
+<p>Handlers for transitions can be specified in a number of ways, where the most simple handler is an injectable <code>function</code>.
+<br/>
+Here is a basic example:
+<pre class="prettyprint linenums">
+ angular.module('demo', ['dotjem.routing'])
+   .config(['$stateTransitionProvider', function(stp) {
+     stp
+      .transition('locked', 'closed', ['$transition', function($transition) {
+        console.log('Door was unlocked');
+      }])
+      .transition('locked', 'open', ['$transition', function($transition) {
+        console.log("Can't open a locked door!");
+        $transition.cancel();
+      }])
+      .transition('open', 'closed', ['$transition', function($transition) {
+        console.log('Door was closed');
+      }])
+      .transition('open', 'locked', ['$transition', function($transition) {
+        console.log("Can't lock an open door!");
+        $transition.cancel();
+      }])
+      .transition('closed', 'open', ['$transition', function($transition) {
+        console.log('Door was opened');
+      }])
+      .transition('closed', 'locked', ['$transition', function($transition) {
+        console.log('Door was locked');
+      }])
+   }]);
+</pre>
+
+<h4 id="handlerstages">Handler Stages</h6>
+
+<p>The example above describes how simple handlers can be registered, however handlers can also be specified to be called at specific transition stages.
+<br/>
+Basically this boils down to <code>before</code>, <code>between</code>, <code>after</code>. The flow of these will be:</p>
+
+<ol>
+<li>Handler: <code>before</code></li>
+<li>Event: <code>$stateChangeStart</code></li>
+<li>Resolve: Views, Dependencies etc.</li>
+<li>Handler: <code>between</code></li>
+<li>Event: <code>$stateChangeSuccess</code> or <code>$stateChangeError</code></li>
+<li>Handler: <code>after</code></li>
+</ol>
+
+<p>When registering transitions like demonstrated in the example above, this will be maped to the "between" stage.
+<br/>
+To target specific stages of a transition use a transition object instead as in the example below:
+<pre class="prettyprint linenums">
+ angular.module('demo', ['dotjem.routing'])
+   .config(['$stateTransitionProvider', function(stp) {
+     stp
+      .transition('closed', 'open', {
+        before: ['$transition', function($transition) {
+          console.log('We are about to open the door.');
+        }],
+        between: ['$transition', function($transition) {
+          console.log('We are opening the door.');
+        }],
+        after: ['$transition', function($transition) {
+          console.log('We have opened the door.');
+        }]
+      }])
+   }]);
+</pre>
+Here we defined a handler for all stages, each stage is optional however, so if we just wished to be called before the transition started, we could leave the <code>between</code> and <code>after</code> out of it:
+<pre class="prettyprint linenums">
+ angular.module('demo', ['dotjem.routing'])
+   .config(['$stateTransitionProvider', function(stp) {
+     stp
+      .transition('closed', 'open', {
+        before: ['$transition', function($transition) {
+          console.log('We are about to open the door.');
+        }]
+      }])
+   }]);
+</pre>
+<br/></p>
+
+<h3 id="targetingmultiplestates">Targeting Multiple States</h5>
+
+<p>When defining states when configuring transitions, multiple states can be targeted either using the <code>*</code> wildcard or as arrays.</p>
+
+<h4 id="usingwildcards">Using Wildcards</h6>
+
+<p>By using <code>*</code> one can target all states the the Hierarchy below.
+<br/>
+So if we just use <code>*</code> we target all existing states under <code>root</code>, and we can define a global handler that gets called on all transitions by using <code>*</code> both as destination and source.</p>
+
+<pre class="prettyprint linenums">
+ angular.module('demo', ['dotjem.routing'])
+   .config(['$stateTransitionProvider', function(stp) {
+     stp
+       .transition('*', '*', ['$transition', function($transition) {
+         console.log('This handler will get called for all transitions');
+       }])
+   }]);
+</pre>
+
+<p>We can also target all transitions to or from a specific state that way:</p>
+
+<pre class="prettyprint linenums">
+ angular.module('demo', ['dotjem.routing'])
+   .config(['$stateTransitionProvider', function(stp) {
+     stp
+       .transition('*', 'state', ['$transition', function($transition) {
+         console.log('This handler will get called for all'
+                   + ' transitions to "state"');
+       }])
+       .transition('state', '*', ['$transition', function($transition) {
+         console.log('This handler will get called for all'
+                   + ' transitions from "state"');
+       }])
+   }]);
+</pre>
+
+<p>This was global handlers, but we might also wan't to target any state below a specific state:</p>
+
+<pre class="prettyprint linenums">
+ angular.module('demo', ['dotjem.routing'])
+   .config(['$stateTransitionProvider', function(stp) {
+     stp
+       .transition('*', 'state.*', ['$transition', function($transition) {
+         console.log('This handler will get called for all transitions to'
+                   + ' "state" or any of its descendant states');
+       }])
+       .transition('state.*', '*', ['$transition', function($transition) {
+         console.log('This handler will get called for all transitions from'
+                   + ' "state" or any of it's descendant states');
+       }])
+   }]);
+</pre>
+
+<h4 id="usingarrays">Using Arrays</h6>
+
+<p>In addition to using the <code>*</code> wildcart to target multiple states, it is also possible to use arrays for a more specific match.</p>
+
+<pre class="prettyprint linenums">
+ angular.module('demo', ['dotjem.routing'])
+   .config(['$stateTransitionProvider', function(stp) {
+     stp
+       .transition(['book', 'book.item', 'book.list'],
+                   'paper',
+                   ['$transition', function($transition) {
+                     console.log('This handler will get called for transitions from'
+                               + ' "book", "book.item" and "book.list" to "paper"');
+       })]
+       .transition('paper',
+                   ['book', 'book.item', 'book.list'],
+                   ['$transition', function($transition) {
+                     console.log('This handler will get called for transitions to'
+                               + ' "book", "book.item" and "book.list" from "paper"');
+       }])
+   }]);
+</pre>
+
+<p>Each of the states, wildcards can also be used:</p>
+
+<pre class="prettyprint linenums">
+ angular.module('demo', ['dotjem.routing'])
+   .config(['$stateTransitionProvider', function(stp) {
+     stp
+      .transition(['book', 'book.item.*', 'book.list.*'],
+                  ['paper', 'pen.*'],
+                  ['$transition', function($transition) {
+                    console.log('Handle all the above, this creates'
+                              + ' to many combinations to write out');
+      }])
+   }]);
+</pre></div>
 <div class="member method"><h2 id="Methods">Methods</h2>
-<ul class="methods"><li><h3 id="onEnter">onEnter(state, onenter)</h3>
-<div class="onenter"><h4 id="Parameters">Parameters</h4>
+<ul class="methods"><li><h3 id="onEnter">onEnter(state, handler)</h3>
+<div class="onenter"><p>This is a shorthand method for <code>$stateTransitionProvider.transition('*', state, handler);</code>
+<br/>
+Instead of using this method, the transitions can also be configured when defining states through the <a href="#/api/dotjem.routing.$stateProvider">$stateProvider</a>.</p><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">state – {string|State|Array} – </code>
-<p>The state we are transitioning to.</p></li>
-<li><code ng:non-bindable="">onenter – {funtion|Object} – </code>
-<p>The handler to invoke when entering the state.</p></li>
+<p>The state name matchers(s) to match when entering.</p></li>
+<li><code ng:non-bindable="">handler – {funtion|Object} – </code>
+<p>The handler to invoke when entering the state.
+<br/>
+Either a injectable function or a handler object. If handler is an object, it must define one or more of the
+following properties:</p>
+
+<ul>
+<li><code>before</code> <code>{function}</code> : handler to be called before transition starts</li>
+<li><code>between</code> <code>{function}</code> : handler to be called right after views are resolved</li>
+<li><code>after</code> <code>{function}</code> : handler to be called when transition is complete</li>
+</ul></li>
 </ul>
 </div>
 </li>
-<li><h3 id="onExit">onExit(state, onexit)</h3>
-<div class="onexit"><h4 id="Parameters">Parameters</h4>
+<li><h3 id="onExit">onExit(state, handler)</h3>
+<div class="onexit"><p>This is a shorthand method for <code>$stateTransitionProvider.transition(state, '*', handler);</code>
+<br/>
+Instead of using this method, the transitions can also be configured when defining states through the <a href="#/api/dotjem.routing.$stateProvider">$stateProvider</a>.</p><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">state – {string|State|Array} – </code>
-<p>The state we are transitioning from.</p></li>
-<li><code ng:non-bindable="">onexit – {funtion|Object} – </code>
-<p>The handler to invoke when entering the state.</p></li>
+<p>The state name matchers(s) to match when leaving.</p></li>
+<li><code ng:non-bindable="">handler – {funtion|Object} – </code>
+<p>The handler to invoke when entering the state.
+<br/>
+Either a injectable function or a handler object. If handler is an object, it must define one or more of the
+following properties:</p>
+
+<ul>
+<li><code>before</code> <code>{function}</code> : handler to be called before transition starts</li>
+<li><code>between</code> <code>{function}</code> : handler to be called right after views are resolved</li>
+<li><code>after</code> <code>{function}</code> : handler to be called when transition is complete</li>
+</ul></li>
 </ul>
 </div>
 </li>
 <li><h3 id="transition">transition(from, to, handler)</h3>
-<div class="transition"><h4 id="Parameters">Parameters</h4>
+<div class="transition"><p>Register a single handler to get called when leaving the state(s) passed as the from parameter
+to the state(s) passed as the to parameter.</p><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">from – {string|State|Array} – </code>
-<p>The state we are transitioning from.</p></li>
+<p>The state name matchers(s) to match on leaving.</p></li>
 <li><code ng:non-bindable="">to – {string|State|Array} – </code>
-<p>The state we are transitioning to.</p></li>
+<p>The The state name matchers(s) to match on entering.</p></li>
 <li><code ng:non-bindable="">handler – {funtion|Object} – </code>
-<p>The handler to invoke when the transitioning occurs.</p></li>
+<p>The handler to invoke when the transitioning occurs.
+<br/>
+Either a injectable function or a handler object. If handler is an object, it must define one or more of the
+following properties:</p>
+
+<ul>
+<li><code>before</code> <code>{function}</code> : handler to be called before transition starts</li>
+<li><code>between</code> <code>{function}</code> : handler to be called right after views are resolved</li>
+<li><code>after</code> <code>{function}</code> : handler to be called when transition is complete</li>
+</ul></li>
 </ul>
 </div>
 </li>
