--- a/doc/partials/api/dotjem.routing.$stateTransition.html
+++ b/doc/partials/api/dotjem.routing.$stateTransition.html
@@ -3,11 +3,5 @@
 )</span>
 </h1>
 <div><h2 id="Description">Description</h2>
-<div class="description"><p>Internal use</p></div>
-<h2 id="Dependencies">Dependencies</h2>
-<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/ng.$q">$q</a></code>
-</li>
-<li><code ng:non-bindable=""><a href="#/api/ng.$injector">$injector</a></code>
-</li>
-</ul>
+<div class="description"><p>See <a href="#/api/dotjem.routing.$stateTransitionProvider">$stateTransitionProvider</a> for details on how to configure transitions.</p></div>
 </div>
