--- a/doc/partials/api/dotjem.routing.$view.html
+++ b/doc/partials/api/dotjem.routing.$view.html
@@ -3,81 +3,197 @@
 )</span>
 </h1>
 <div><h2 id="Description">Description</h2>
-<div class="description"></div>
+<div class="description"><p>The <code>$view</code> service is used to update any defined <a href="#/api/dotjem.routing.directive:jemView">jemView</a> directive defined in the DOM.
+This will primarily used by the <a href="#/api/dotjem.routing.$state">$state</a> service to update views on transitions. But that way, the <code>$view</code> service
+enables also enables changes to views through transitions defined on the <a href="#/api/dotjem.routing.$stateTransitionProvider">$stateTransitionProvider</a>.
+<br/>
+It also allows updates outside the scope of the <code>$state</code> service.
+<br/>
+<strong>Note:</strong> Whenever a state change causes a series of view updates, these are done in a "transaction", this means that they won't be applied untill
+the state transition has run to completion. This means that when accessing the <code>$view</code> service within transitions etc. will fall in under the same transaction, which
+is different than if we call it in a different context.
+<br/>
+Any outside services are also able to create transactional updates by calling the <code>beginUpdate</code> method, and then <code>commit</code> on the returned object.</p></div>
+<h2 id="Dependencies">Dependencies</h2>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/ng.$rootScope">$rootScope</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/ng.$q">$q</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/ng.$template">$template</a></code>
+</li>
+</ul>
 <div class="member method"><h2 id="Methods">Methods</h2>
-<ul class="methods"><li><h3 id="beginUpdate">beginUpdate(name)</h3>
-<div class="beginupdate"><h4 id="Parameters">Parameters</h4>
-<ul class="parameters"><li><code ng:non-bindable="">name – {string} – </code>
-<p>Name</p></li>
+<ul class="methods"><li><h3 id="beginUpdate">beginUpdate()</h3>
+<div class="beginupdate"><p>Starts a new view update transaction in which to record all changes to views before actually applying them.</p><h4 id="Returns">Returns</h4>
+<div class="returns"><code ng:non-bindable="">{Object}</code>
+– <p>A transaction object that can be used to commit or cancel the transaction, see <a href="#/api/dotjem.routing.type:transaction">Transaction</a> for more details.</p></div>
+</div>
+</li>
+<li><h3 id="clear">clear(name)</h3>
+<div class="clear"><p>Clears all views.</p><h4 id="Parameters">Parameters</h4>
+<ul class="parameters"><li><code ng:non-bindable="">name<i>(optional)</i> – {string=} – </code>
+<p>The name of the view to clear.</p></li>
 </ul>
 </div>
 </li>
 <li><h3 id="clear">clear(name)</h3>
-<div class="clear"><p>Clears a view, or all views if no name is provided.</p><h4 id="Parameters">Parameters</h4>
+<div class="clear"><p>Clears the named view.</p><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">name – {string} – </code>
-<p>The name of the view to clear (optional)</p></li>
+<p>The name of the view to clear.</p></li>
 </ul>
 </div>
 </li>
 <li><h3 id="get">get(name)</h3>
-<div class="get"><h4 id="Parameters">Parameters</h4>
+<div class="get"><p>Gets the configuration for a namved view. If a transaction is in progress, updates provided by that will not be reflected untill
+it is comitted.</p><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">name – {string} – </code>
-<p>Name</p></li>
+<p>The name of the view for which to get the configuration.</p></li>
 </ul>
+<h4 id="Returns">Returns</h4>
+<div class="returns"><code ng:non-bindable="">{Object}</code>
+– <p>A view configuration object, this object may defined the following properties:</p>
+
+<ul>
+<li><code>name</code>: <code>{string}</code> The name of the view.</li>
+<li><code>version</code>: <code>{number}</code> The version the view is currently in.</li>
+<li><code>template</code>: <code>{string|Object|function}</code> The template to be applied to the view. See <a href="#/api/dotjem.routing.$template">$template</a> on ways to define templates.</li>
+<li><code>controller</code>: <code>{string|function=}</code> The view confroller either as a function or a named controller defined on the module or a referenced module.</li>
+<li><code>locals</code>: <code>{Object=}</code> value An optional map of dependencies which should be injected into the controller.</li>
+<li><code>sticky</code>: <code>{string=}</code> value A flag indicating that the view is sticky.</li>
+</ul></div>
 </div>
 </li>
+<li><h3 id="get">get()</h3>
+<div class="get"><p>Gets all current view configurations. If a transaction is in progress, updates provided by that will not be reflected untill
+it is comitted.</p><h4 id="Returns">Returns</h4>
+<div class="returns"><code ng:non-bindable="">{Array}</code>
+– <p>A list of view configuration objects, each object may defined the following properties:</p>
+
+<ul>
+<li><code>name</code>: <code>{string}</code> The name of the view.</li>
+<li><code>version</code>: <code>{number}</code> The version the view is currently in.</li>
+<li><code>template</code>: <code>{string|Object|function}</code> The template to be applied to the view. See <a href="#/api/dotjem.routing.$template">$template</a> on ways to define templates.</li>
+<li><code>controller</code>: <code>{string|function=}</code> The view confroller either as a function or a named controller defined on the module or a referenced module.</li>
+<li><code>locals</code>: <code>{Object=}</code> value An optional map of dependencies which should be injected into the controller.</li>
+<li><code>sticky</code>: <code>{string=}</code> value A flag indicating that the view is sticky.</li>
+</ul></div>
+</div>
+</li>
+<li><h3 id="refresh">refresh()</h3>
+<div class="refresh"><p>Refreshes all views.</p></div>
+</li>
 <li><h3 id="refresh">refresh(name, data)</h3>
-<div class="refresh"><h4 id="Parameters">Parameters</h4>
-<ul class="parameters"><li><code ng:non-bindable="">name<i>(optional)</i> – {string=} – </code>
-<p>Name</p></li>
+<div class="refresh"><p>Refreshes a named view.</p><h4 id="Parameters">Parameters</h4>
+<ul class="parameters"><li><code ng:non-bindable="">name – {string} – </code>
+<p>The view to send a refresh.</p></li>
 <li><code ng:non-bindable="">data<i>(optional)</i> – {object=} – </code>
-<p>Data</p></li>
+<p>An optional data object containing information for the refresh.</p></li>
 </ul>
 </div>
 </li>
 <li><h3 id="setIfAbsent">setIfAbsent(name, args)</h3>
-<div class="setifabsent"><h4 id="Parameters">Parameters</h4>
+<div class="setifabsent"><p>Sets a named view if it is not yet known by the <code>$view</code> service of if it was cleared. If the view is already updated by another call this call will be ignored.</p><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">name – {string} – </code>
-<p>Name</p></li>
+<p>The name of the view to set as defined with the <a href="#/api/dotjem.routing.directive:jemView">jemView</a> directive.</p></li>
 <li><code ng:non-bindable="">args – {object} – </code>
-<p>Arguments</p></li>
+<p>View update arguments</p>
+
+<p>args properties:</p>
+
+<ul>
+<li><code>template</code>: <code>{string|Object|function}</code> The template to be applied to the view. See <a href="#/api/dotjem.routing.$template">$template</a> on ways to define templates.</li>
+<li><code>controller</code>: <code>{string|function=}</code> The view confroller either as a function or a named controller defined on the module or a referenced module.</li>
+<li><code>locals</code>: <code>{Object=}</code> value An optional map of dependencies which should be injected into the controller.</li>
+</ul></li>
 </ul>
 </div>
 </li>
 <li><h3 id="setIfAbsent">setIfAbsent(name, template, controller, locals)</h3>
-<div class="setifabsent"><h4 id="Parameters">Parameters</h4>
+<div class="setifabsent"><p>Sets a named view if it is not yet known by the <code>$view</code> service of if it was cleared. If the view is already updated by another call this call will be ignored.</p><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">name – {string} – </code>
-<p>Name</p></li>
-<li><code ng:non-bindable="">template – {object} – </code>
-<p>Template</p></li>
+<p>The name of the view to update as defined with the <a href="#/api/dotjem.routing.directive:jemView">jemView</a> directive.</p></li>
+<li><code ng:non-bindable="">template – {string|object} – </code>
+<p>The template to be applied to the view. See <a href="#/api/dotjem.routing.$template">$template</a> on ways to define templates.</p></li>
 <li><code ng:non-bindable="">controller<i>(optional)</i> – {function=} – </code>
-<p>Controller</p></li>
+<p>The view confroller either as a function or a named controller defined on the module or a referenced module.</p></li>
 <li><code ng:non-bindable="">locals<i>(optional)</i> – {object=} – </code>
-<p>Locals</p></li>
+<p>An optional map of dependencies which should be injected into the controller.</p></li>
 </ul>
 </div>
 </li>
 <li><h3 id="setOrUpdate">setOrUpdate(name, args)</h3>
-<div class="setorupdate"><h4 id="Parameters">Parameters</h4>
+<div class="setorupdate"><p>Sets or Updates a named view, this forces an update if the view has already been updated by another call to the view service.
+<br/>
+If the view is marked sticky it will only force an update if the sticky flag is different than the previous one. In cases where it
+is the same the <code>$viewRefresh</code> event will be raised instead.
+<br/>
+Views can also be refreshed by calling the <code>refresh</code> method.</p><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">name – {string} – </code>
-<p>Name</p></li>
+<p>The name of the view to update as defined with the <a href="#/api/dotjem.routing.directive:jemView">jemView</a> directive.</p></li>
 <li><code ng:non-bindable="">args – {object} – </code>
-<p>Arguments</p></li>
+<p>View update arguments</p>
+
+<p>args properties:</p>
+
+<ul>
+<li><code>template</code>: <code>{string|Object|function}</code> The template to be applied to the view. See <a href="#/api/dotjem.routing.$template">$template</a> on ways to define templates.</li>
+<li><code>controller</code>: <code>{string|function=}</code> The view confroller either as a function or a named controller defined on the module or a referenced module.</li>
+<li><code>locals</code>: <code>{Object=}</code> value An optional map of dependencies which should be injected into the controller.</li>
+<li><code>sticky</code>: <code>{string=}</code> value A flag indicating that the view is sticky.</li>
+</ul></li>
 </ul>
 </div>
 </li>
 <li><h3 id="setOrUpdate">setOrUpdate(name, template, controller, locals, sticky)</h3>
-<div class="setorupdate"><h4 id="Parameters">Parameters</h4>
+<div class="setorupdate"><p>Sets or Updates a named view, this forces an update if the view has already been updated by another call to the view service.
+<br/>
+If the view is marked sticky it will only force an update if the sticky flag is different than the previous one. In cases where it
+is the same the <code>$viewRefresh</code> event will be raised instead.
+<br/>
+Views can also be refreshed by calling the <code>refresh</code> method.</p><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">name – {string} – </code>
-<p>Name</p></li>
-<li><code ng:non-bindable="">template – {object} – </code>
-<p>Template</p></li>
+<p>The name of the view to update as defined with the <a href="#/api/dotjem.routing.directive:jemView">jemView</a> directive.</p></li>
+<li><code ng:non-bindable="">template – {string|object} – </code>
+<p>The template to be applied to the view. See <a href="#/api/dotjem.routing.$template">$template</a> on ways to define templates.</p></li>
 <li><code ng:non-bindable="">controller<i>(optional)</i> – {function=} – </code>
-<p>Controller</p></li>
+<p>The view confroller either as a function or a named controller defined on the module or a referenced module.</p></li>
 <li><code ng:non-bindable="">locals<i>(optional)</i> – {object=} – </code>
-<p>Locals</p></li>
+<p>An optional map of dependencies which should be injected into the controller.</p></li>
 <li><code ng:non-bindable="">sticky<i>(optional)</i> – {string=} – </code>
-<p>Sticky flag</p></li>
+<p>A flag indicating that the view is sticky.</p></li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+<div class="member event"><h2 id="Events">Events</h2>
+<ul class="events"><li><h3 id="$viewRefresh">$viewRefresh</h3>
+<div class="$viewrefresh"><p>Broadcasted when a view refreshed, if a transaction is active this will not occur before that is commited.</p><div class="inline"><h4 id="Type.">Type:</h4>
+<div class="type-">broadcast</div>
+</div>
+<div class="inline"><h4 id="Target.">Target:</h4>
+<div class="target-">root scope</div>
+</div>
+<h4 id="Parameters">Parameters</h4>
+<ul class="parameters"><li><code ng:non-bindable="">angularEvent – {Object} – </code>
+<p>Synthetic event object.</p></li>
+<li><code ng:non-bindable="">name – {State} – </code>
+<p>Name of the view that was refreshed.</p></li>
+</ul>
+</div>
+</li>
+<li><h3 id="$viewUpdate">$viewUpdate</h3>
+<div class="$viewupdate"><p>Broadcasted when a view updated, if a transaction is active this will not occur before that is commited.</p><div class="inline"><h4 id="Type.">Type:</h4>
+<div class="type-">broadcast</div>
+</div>
+<div class="inline"><h4 id="Target.">Target:</h4>
+<div class="target-">root scope</div>
+</div>
+<h4 id="Parameters">Parameters</h4>
+<ul class="parameters"><li><code ng:non-bindable="">angularEvent – {Object} – </code>
+<p>Synthetic event object.</p></li>
+<li><code ng:non-bindable="">name – {State} – </code>
+<p>Name of the view that was updated.</p></li>
 </ul>
 </div>
 </li>
