--- a/doc/partials/api/dotjem.routing.directive.jemAnchor.html
+++ b/doc/partials/api/dotjem.routing.directive.jemAnchor.html
@@ -3,10 +3,10 @@
 )</span>
 </h1>
 <div><h2 id="Description">Description</h2>
-<div class="description"></div>
+<div class="description"><p>Provides an anchor point for the <a href="#/api/dotjem.routing.$scroll">$scroll</a> service to use.</p></div>
 <h2 id="Usage">Usage</h2>
 <div class="usage">as element:<pre class="prettyprint linenums">&lt;jem-anchor
-       jemAnchor="{string}"&gt;
+       id="{string}"&gt;
 &lt;/jem-anchor&gt;</pre>
 as attribute<pre class="prettyprint linenums">&lt;ANY jem-anchor="{string}"&gt;
    ...
@@ -14,15 +14,9 @@ as attribute<pre class="prettyprint linenums">&lt;ANY jem-anchor="{string}"&gt;
 as class<pre class="prettyprint linenums">&lt;ANY class="jem-anchor: {string};"&gt;
    ...
 &lt;/ANY&gt;</pre>
-<h3 id="Directive.info">Directive info</h3>
-<div class="directive-info"><ul><li>This directive creates new scope.</li>
-</ul>
-</div>
 <h3 id="Parameters">Parameters</h3>
-<ul class="parameters"><li><code ng:non-bindable="">jemAnchor – {string} – </code>
+<ul class="parameters"><li><code ng:non-bindable="">jemAnchor|id – {string} – </code>
 <p>Identifier of the anchor</p></li>
 </ul>
 </div>
-<h2 id="Example">Example</h2>
-<div class="example"><p><example module="ngViewExample" deps="angular-route.js" animations="true"></p></div>
 </div>
