--- a/doc/partials/api/dotjem.routing.$state.html
+++ b/doc/partials/api/dotjem.routing.$state.html
@@ -24,7 +24,63 @@
 </ul>
 <div class="member method"><h2 id="Methods">Methods</h2>
 <ul class="methods"><li><h3 id="goto">goto(state, params)</h3>
-<div class="goto"><p>Goes to the specified state,</p><h4 id="Parameters">Parameters</h4>
+<div class="goto"><p>To transition to another state, use <code>goto</code>...</p>
+
+<ul>
+<li>state: either the full name of a state or a state object (e.g. use <code>lookup</code> to get that object).</li>
+<li>params: (optional) a set of parameters to use for the state.</li>
+</ul>
+
+<p>If the state has an associated route, that route will be activated and the location with change it the address bar of the browser. It is also important that all parameters are defined for such route, however if the previous state defines any of those, they won't need to be redefined.</p>
+
+<p>e.g. say the following states are defined:</p>
+
+<pre class="prettyprint linenums">
+$stateProvider
+  .state('home', { route: '/home/:homeParam' })
+  .state('home.child', { route: '/child/:childParam' })
+</pre>
+
+<p>To activate the <code>home</code> state, a call to goto must include the <code>:homeParam</code> e.g:</p>
+
+<pre class="prettyprint linenums">
+$state.goto('home', { homeParam: 'goHome' } );
+</pre>
+
+<p>To activate the <code>home.child</code> state, a call to goto must include the <code>:homeParam</code> and the <code>:childParam</code> e.g:</p>
+
+<pre class="prettyprint linenums">
+$state.goto('home.child', { homeParam: 'goHome', childParam: 'goChild' } );
+</pre>
+
+<p>To activate the <code>home.child</code> state when currently in the <code>home</code> state, a call to goto must include the the <code>:childParam</code> and can optionally include the <code>:homeParam</code> e.g:</p>
+
+<p></pre>
+$state.goto('home.child', { childParam: 'goChild' } );
+$state.goto('home.child', { homeParam: 'goHome', childParam: 'goChild' } );
+</pre></p>
+
+<p>We can leave out the home param as that is already defined in the current set of params, that also means we can goto home from child without specifying any params, but if we wish to change it we must specify it, the following example will demonstrate a full flow:</p>
+
+<pre class="prettyprint linenums">
+$state.goto('home', { homeParam: 1 } );
+// - location set to: '/home/1'
+
+$state.goto('home.child', { childParam: 1 } );
+// - location set to: '/home/1/child/1'
+
+$state.goto('home');
+// - location set to: '/home/1'
+
+$state.goto('home.child', { homeParam: 2, childParam: 2 } );
+// - location set to: '/home/2/child/2'
+
+$state.goto('home.child', { childParam: 4 } );
+// - location set to: '/home/2/child/4'
+
+$state.goto('home.child', { homeParam: 4 } );
+// - location set to: '/home/4/child/4'
+</pre><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">state – {State|string} – </code>
 <p>Current state.</p></li>
 <li><code ng:non-bindable="">params – {Object} – </code>
@@ -33,21 +89,76 @@
 </div>
 </li>
 <li><h3 id="lookup">lookup(path)</h3>
-<div class="lookup"><p>Finds a state based on the provided expression or name.</p><h4 id="Parameters">Parameters</h4>
+<div class="lookup"><p>To lookup a state, use <code>lookup</code>...
+<br/>
+<br/>
+Path is inspired by XPath and supports a subset of that syntax.</p>
+
+<ul>
+<li><code>.</code> : current state</li>
+<li><code>..</code> : parent state</li>
+<li><code>/</code> : path separator</li>
+<li><code>[]</code> : index selector, errors on overflow</li>
+<li><code>$node()</code> : sibling selector, can overflow</li>
+</ul>
+
+<p><br/><br/>
+Using these selectors, the following are examples of paths:</p>
+
+<ul>
+<li><code>state</code> : Selects <code>state</code> from the current node.</li>
+<li><code>/state</code> : Selects <code>state</code> from the root.</li>
+<li><code>./state</code> : Selects <code>state</code> from the current node.</li>
+<li><code>./state/child</code> : Selects <code>child</code> under <code>state</code> from the current node.</li>
+<li><code>../state</code> : Selects <code>state</code> under the parent of the current state.</li>
+<li><code>[0]</code> : Selects the first child of the current state.</li>
+<li><code>[-1]</code> : Selects the last child of the current state.</li>
+<li><code>./state/[-1]</code> : Selects the last child under <code>state</code> under current state.</li>
+<li><code>$node(1)</code> : Selects the next sibling of the current state.</li>
+<li><code>$node(-1)</code> : Selects the previous sibling of the current state.</li>
+</ul>
+
+<p><br/><br/>
+<strong>Note:</strong> When using <code>$node()</code>, it allows for overflow. this means if you are at the last child of a state and selects <code>$node(1)</code>, it will select the first child instead.
+<br/><br/>
+Finally it is also possible to select states by their full name, however as <code>state</code> would also be a valid relative selector, full name selection is only used when the name contains a <code>.</code>, this means that if you wish to select the states directly under root by name you will have to use either the syntax above or it's full name with root included:</p>
+
+<ul>
+<li><code>root.state</code>: Selects <code>state</code> under root.</li>
+<li><code>/state</code> : Selects <code>state</code> under root.</li>
+</ul>
+
+<p><br/><br/>
+Errors will be thrown in cases where the path isn't valid.
+The root state it self can't be selected. (The root state is implicitly defined by the system, when defining <code>.state('home', {...});</code>, the state <code>home</code> isn't a root state, it is instead a child of root.</p><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">path – {string} – </code>
-<p>Expression to resolve or the full name of a state.</p></li>
+<p>Path expression to the state that can either be relative to the current state or from the root (/).</p></li>
 </ul>
 </div>
 </li>
 <li><h3 id="reload">reload(state)</h3>
-<div class="reload"><p>Reloads the state and associated views.</p><h4 id="Parameters">Parameters</h4>
+<div class="reload"><p>To force reload a state, use <code>reload</code>...</p>
+
+<ul>
+<li>call <code>.reload()</code> to reload only the current leaf state.</li>
+<li>call <code>.reload(true)</code> to reload all active states from the root state to the current leaf.</li>
+<li>call <code>.reload('state.full.name')</code> to reload all states from <code>state.full.name</code> and down to the current leaf.
+<br/><br/>
+E.g. if the current state is <code>state.full.name.to.here</code> and <code>.reload()</code> is called then all views etc. will be reloaded for the leaf state <code>here</code>.
+<br/><br/>
+If <code>.reload(true)</code> called, views etc. will be reloaded for all the states <code>state</code>, <code>full</code>, <code>name</code>, <code>to</code>, <code>here</code>.
+<br/><br/>
+Finally if  <code>.reload('state.full.name')</code> is called, views etc. will be reloaded for the states <code>name</code>, <code>to</code>, <code>here</code>.</li>
+</ul><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">state<i>(optional)</i> – {State|string|boolean=} – </code>
 <p>Name or State in the current hierachy or true/false</p></li>
 </ul>
 </div>
 </li>
 <li><h3 id="url">url(state, params)</h3>
-<div class="url"><p>An url generated from the provided parameters.</p><h4 id="Parameters">Parameters</h4>
+<div class="url"><p>To build a url for a particular state, use <code>url</code>...
+<br/><br/>
+If the state defined either by state, or current state does not have an route associated with it, it will throw an error.</p><h4 id="Parameters">Parameters</h4>
 <ul class="parameters"><li><code ng:non-bindable="">state<i>(optional)</i> – {State|string=} – </code>
 <p>A state to generate an URL for</p></li>
 <li><code ng:non-bindable="">params<i>(optional)</i> – {Object=} – </code>
