--- a/doc/partials/api/dotjem.routing.$state.html
+++ b/doc/partials/api/dotjem.routing.$state.html
@@ -88,6 +88,16 @@ $state.goto('home.child', { homeParam: 4 } );
 </ul>
 </div>
 </li>
+<li><h3 id="is">is(state)</h3>
+<div class="is"><p>Checks if the current state matches the provided state.</p><h4 id="Parameters">Parameters</h4>
+<ul class="parameters"><li><code ng:non-bindable="">state<i>(optional)</i> – {State|string=} – </code>
+<p>A State or name to check against the current state.</p></li>
+</ul>
+<h4 id="Returns">Returns</h4>
+<div class="returns"><code ng:non-bindable="">{boolean}</code>
+– <p>true if the stats mathces, otherwise false.</p></div>
+</div>
+</li>
 <li><h3 id="lookup">lookup(path)</h3>
 <div class="lookup"><p>To lookup a state, use <code>lookup</code>...
 <br/>
