Monor documentation changes.

--- a/doc/partials/api/dotjem.routing.type.transaction.html
+++ b/doc/partials/api/dotjem.routing.type.transaction.html
@@ -14,6 +14,9 @@
 Only the final state will be applied, meaning that if the same view had recieved a series of updates, only an update
 for the final state the view will take will be issues, if it causes the view to change state.</p></div>
 </li>
+<li><h3 id="pending">pending()</h3>
+<div class="pending"><p>Returns all pending changes.</p></div>
+</li>
 </ul>
 </div>
 </div>
