minor doc fixes

--- a/doc/partials/api/dotjem.routing.$stateProvider.html
+++ b/doc/partials/api/dotjem.routing.$stateProvider.html
@@ -11,8 +11,8 @@ Here is a very basic example of configuring states.</p>
 angular.module('demo', ['dotjem.routing']).
   config(['$stateProvider', function($stateProvider) {
   $stateProvider
-      .state('phones', { /*.. Parameters for the state ..*\/ })
-      .state('tablets', { /*.. Parameters for the state ..*\/ });
+      .state('phones', { ...Parameters for the state... })
+      .state('tablets', { ...Parameters for the state... });
 }]);
 </pre>
 
@@ -72,8 +72,8 @@ e.g.if we had a <code>main</code> view and a <code>hint</code> view we could do.
          }
        })
    }])
-   .controller('PhonesCtrl', ['$scope', function ($scope) { /*...*\/ }])
-   .controller('TabletsCtrl', ['$scope', function ($scope) { /*...*\/ }]);
+   .controller('PhonesCtrl', ['$scope', function ($scope) { ... }])
+   .controller('TabletsCtrl', ['$scope', function ($scope) { ... }]);
 </pre>
 <br/></p>
 
@@ -116,9 +116,9 @@ One way is using a name convention for states where <code>.</code> is used to se
         }
     })
 }])
- .controller('PhonesCtrl', ['$scope', function ($scope) { /*...*\/ }])
- .controller('PhonesListCtrl', ['$scope', function ($scope) { /*...*\/ }])
- .controller('PhonesDetailsCtrl', ['$scope', function ($scope) { /*...*\/ }]);
+ .controller('PhonesCtrl', ['$scope', function ($scope) { ... }])
+ .controller('PhonesListCtrl', ['$scope', function ($scope) { ... }])
+ .controller('PhonesDetailsCtrl', ['$scope', function ($scope) { ... }]);
 </pre>
 
 <p>The above may indicate that views also has a child to parent relation in the naming, but this is merely a good naming convention, there is no constraint on how views are named.
