changed url for an asset to prepare for new github pages

--- a/doc/partials/api/dotjem.routing.$stateProvider.html
+++ b/doc/partials/api/dotjem.routing.$stateProvider.html
@@ -126,7 +126,7 @@ It then becomes possible to register &quot;home.recents&quot; as a child named &
  .state('staff.all', {})
  .state('staff.single', {})
 </pre>
-<p><img type="image/svg+xml" src="assets/state.provider.structure.png"/></p>
+<p><img type="image/svg+xml" src="docs/assets/$state/state.provider.structure.svg"/></p>
 </div></td></tr><tr><td>state</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="dotjem-routing-stateprovider-state-page"><p>All information about the state.</p>
 <p>   Object properties:</p>
 <ul>
